# talon

./: .gitignore  Cargo.toml  README.md  config.toml
src/: agent.rs  config.rs  executor.rs  main.rs  scheduler.rs  store.rs  telegram.rs  web.rs
