[package]
name = "talon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
cron = "0.12"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
